--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -227,7 +227,7 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Garstka \\bronze\\ Jednosek o \\textbf{najwyższym} koszcie rekrutacji\n"
+"  \\item 2 × Garstka \\bronze\\ Jednostek o \\textbf{najwyższym} koszcie rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
