--- a/translations/stand_united.tex/pl.po
+++ b/translations/stand_united.tex/pl.po
@@ -280,8 +280,8 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Garstka najtańszych \\bronze\\ Jednosek\n"
-"  \\item 1 × Garstka najtańszych \\silver\\ Jednosek\n"
+"  \\item 1 × Garstka najtańszych \\bronze\\ Jednostek\n"
+"  \\item 1 × Garstka najtańszych \\silver\\ Jednostek\n"
 "\\end{itemize}\n"
 "\n"
 
