--- a/translations/close_to_enemies.tex/pl.po
+++ b/translations/close_to_enemies.tex/pl.po
@@ -284,7 +284,7 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Garstka dowolnych \\bronze\\ Jednosek\n"
+"  \\item 1 × Garstka dowolnych \\bronze\\ Jednostek\n"
 "\\end{itemize}\n"
 "\n"
 
