Fix art, adjsut layout, increase transparenty, add backgrounds

--- a/campaigns/castle_greek_gift.tex
+++ b/campaigns/castle_greek_gift.tex
@@ -118,7 +118,10 @@ During this Castle campaign Scenario, the following rules apply:
 
 \columnbreak
 
-\includegraphics[width=\linewidth, keepaspectratio]{\art/griffin.png}
+{
+  \transparent{0.2}
+  \includegraphics[width=\linewidth, keepaspectratio]{\art/griffin.png}
+}
 
 \end{multicols}
 
