--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -32,10 +32,12 @@ This Scenario is played over a maximum of 11 Rounds.
 
 \textbf{Town Buildings:} \bronze\ Dwelling
 
-\textbf{Map Tile Pool:} None
+\vfill
+\begin{center}
+  \transparent{0.2}{\includegraphics[width=\linewidth, keepaspectratio]{\art/vision.png}}
+\end{center}
 
-\textbf{Additional Bonus:} None
-
+\columnbreak
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 \begin{itemize}
@@ -84,7 +86,7 @@ During this Scenario:
 \phantom{.}
 \vfill
 \begin{center}
-  \transparent{0.3}{\includegraphics[width=\linewidth, keepaspectratio]{\images/earthquake.png}}
+  \transparent{0.2}{\includegraphics[width=\linewidth, keepaspectratio]{\images/earthquake.png}}
 \end{center}
 \vfill
 \phantom{.}
