--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -77,6 +77,7 @@ During this Scenario:
 \begin{itemize}
   \item When a player Visits an Obelisk, they roll 2 \svg{treasure} and choose one to resolve.
   \item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.
+  \columnbreak
   \item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:
   \begin{itemize}
     \item \textbf{Easy:} 1 × \azure\, 2 × \silver\, 1 × \bronze\
