--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -109,7 +109,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 \vspace*{\fill}
 
 \begin{center}
-  \includegraphics[width=\linewidth]{\art/dimension_door.png}
+  \transparent{0.2}{\includegraphics[width=\linewidth]{\art/dimension_door.png}}
 \end{center}
 
 \vspace*{\fill}
@@ -194,13 +194,13 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 \vspace*{\fill}
 
 \begin{center}
-  \transparent{0.3}{\includegraphics[width=0.6\linewidth, keepaspectratio]{\art/land_mine.png}}
+  \transparent{0.2}{\includegraphics[width=0.6\linewidth, keepaspectratio]{\art/land_mine.png}}
 \end{center}
 
 \newpage
 
 \begin{tikzpicture}[remember picture, overlay]
-  \node(bg)[anchor=center, opacity=0.15] at (current page.center) {
+  \node(bg)[anchor=center, opacity=0.07] at (current page.center) {
     \includegraphics[width=\paperwidth, keepaspectratio]{\art/hellstorm_helmet.png}
   };
 \end{tikzpicture}
