--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -78,7 +78,7 @@ The exception to this rule is when there are three Neutral \svg{unit_ground} or 
 See examples that follow.
 
 \begin{center}
-  \includegraphics[width=0.65\linewidth]{\art/resurrection.png}
+  \transparent{0.2}{\includegraphics[width=0.65\linewidth]{\art/resurrection.png}}
 \end{center}
 
 \end{multicols}
@@ -136,7 +136,7 @@ The following are not custom rules, but rather recommendations to help you get t
 \end{itemize}
 
 \begin{center}
-  \includegraphics[width=0.7\linewidth]{\art/coin.png}
+  \transparent{0.2}{\includegraphics[width=0.7\linewidth]{\art/coin.png}}
 \end{center}
 
 \end{multicols}
