--- a/coops/close_to_enemies.tex
+++ b/coops/close_to_enemies.tex
@@ -224,6 +224,11 @@ Prepare an AI Deck for Settlement defenders.
   \vspace*{\fill}
 \end{center}
 
+\begin{tikzpicture}[overlay]
+  \node(bg)[anchor=center, opacity=0.07, xshift=-2em, yshift=-24em] at (current page.south) {
+    \includegraphics[width=1.1\paperwidth, keepaspectratio]{\art/ballista.png}
+  };
+\end{tikzpicture}
 \begin{center}
   \vspace*{\fill}
   \begin{figure}[!h]
