--- a/coops/stand_united.tex
+++ b/coops/stand_united.tex
@@ -95,6 +95,9 @@ If at least one player has failed to defeat the Dragon Utopia by the end of Roun
 \end{multicols}
 
 \begin{tikzpicture}[overlay]
+  \node(bg)[anchor=center, opacity=0.07, xshift=-8em, yshift=-38.9em] at (current page.center) {
+    \includegraphics[width=1.2\paperwidth, keepaspectratio]{\art/cove_part.png}
+  };
   \centering
   \node at (13.5, 1.5) {\includegraphics[scale=0.3]{\maps/stand_united_3p.png}};
   \node at (13.5, -2.8) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
