--- a/sections/credits.tex
+++ b/sections/credits.tex
@@ -26,7 +26,7 @@ Everyone who has supported the project with suggestions, corrections, image reso
 
 \vspace*{\fill}
 
-\includegraphics[width=1.3\linewidth]{\art/genie.png}
+{\tikz[transparency group]\node[opacity=0.2]{\includegraphics[width=1.3\linewidth]{\art/genie.png}};}
 
 \vspace*{\fill}
 
